--- a/lib/Makefile
+++ b/lib/Makefile
@@ -171,6 +171,10 @@ SUBDIR.${MK_BSNMP}+=	libbsnmp
 SUBDIR.${MK_LIBCHERI}+=	libhelloworld
 SUBDIR.${MK_CHERI}+=	libsyscalls
 
+# We could make this MK_CHERI_CAPREVOKE, but it doesn't hurt to always build it
+# even if the tree isn't configured to engage in revocation.
+SUBDIR.${MK_CHERI}+=	libcheri_caprevoke
+
 .if ${MK_LIBCHERI} == "yes" && ${MACHINE_ARCH} != "mips"
 _libc_cheri=	libc_cheri
 _libcheri=	libcheri
