kyua: Only install examples if requested
Reviewed by:	brooks
Differential Revision:	https://reviews.freebsd.org/D27638

(cherry picked from commit 395cb8fbc072a994bbc2c0059bd77168d20df522)

--- a/usr.bin/kyua/Makefile
+++ b/usr.bin/kyua/Makefile
@@ -168,7 +168,11 @@ SRCS+=	cli/cmd_about.cpp		\
 	cli/config.cpp			\
 	cli/main.cpp
 
-FILESGROUPS=	DOCS EXAMPLES MISC STORE
+FILESGROUPS=	DOCS MISC STORE
+
+.if ${MK_EXAMPLES} != "no"
+FILESGROUPS+=	EXAMPLES
+.endif
 
 # Install a minimal default config that uses the 'tests' user.
 # The examples config is not appropriate for general use.
