cheribsdtest: Add a test demonstrating broken hybrid lazy binding
Currently riscv64-hybrid's rtld-elf fails to save/restore the full
capability argument registers, causing cheribsdtest-hybrid-dynamic(-mt)
to fail this test.

This requires introducing a new shared library we link against that
provides a function taking a capability we know will not have been
called before running the test, since even weak functions are not
preemptible when linking an executable.

--- a/bin/cheribsdtest/Makefile.cheribsdtest
+++ b/bin/cheribsdtest/Makefile.cheribsdtest
@@ -93,6 +93,9 @@ SRCS+=	cheribsdtest_sandbox.S
 .ifdef CHERIBSD_DYNAMIC_TESTS
 CFLAGS+=	-DCHERIBSD_DYNAMIC_TESTS
 CFLAGS+=	'-DLIBM_SONAME="libm.so.5"'
+CFLAGS+=	-I${SRCTOP}/lib/libcheribsdtest_dynamic
+LIBADD+=	cheribsdtest_dynamic
+SRCS+=		cheribsdtest_lazy_bind.c
 .else
 NO_SHARED?=	YES
 # XXX-JC: Enable unconditionally once we have a dynamic libcheri
