--- a/usr.bin/kyua/Makefile
+++ b/usr.bin/kyua/Makefile
@@ -12,12 +12,10 @@ KYUA_VERSION=	0.13
 KYUA_SRCDIR=	${SRCTOP}/contrib/kyua
 .PATH: ${KYUA_SRCDIR}
 
-.if ${MACHINE_ARCH} != "mips64"
+.if ${MACHINE_ABI:Mpurecap}
 # FIXME: doesn't work as a purecap binary yet
-WANT_COMPAT=   64
+NEED_COMPAT=   64
 .include <bsd.compat.mk>
-.else
-WANT_CHERI=none
 .endif
 
 PROG_CXX=	kyua
