strfcap: format decoded CHERI capability
strfcap formats information from decoding a capability into a
string buffer according to a format string. For example, the format
"0x%a [%P,0x%b-0x%t]%? %A" is equivalent to printf(3)'s "%#lp" for
non-NULL-derived capabilities.

Generally speaking strfcap is modeled on strftime(3) with two
exceptions based on snprintf(3):
 * On success it returns the total number of bytes that would be
   written if the buffer were large enough (excluding the terminating
   NUL character).  This permit a caller to allocate space by calling
   twice.
 * It always NUL-terminates the string (including on error).  This
   ensures that unchecked calls do not result in buffer overreads
   if the programmer specifies a bad format or provides a too-small
   buffer.

--- a/bin/cheribsdtest/Makefile.cheribsdtest
+++ b/bin/cheribsdtest/Makefile.cheribsdtest
@@ -16,6 +16,7 @@ SRCS+=	cheribsdtest_bounds_globals.c					\
 	cheribsdtest_registers.c					\
 	cheribsdtest_sealcap.c						\
 	cheribsdtest_signal.c						\
+	cheribsdtest_strfcap.c						\
 	cheribsdtest_string.c						\
 	cheribsdtest_syscall.c						\
 	cheribsdtest_tls.c						\
