cheribsdtest: Add tests to check the bounds for C++-style allocations
Notably, make_shared currently fails as it includes the internal control
block in the same allocation and doesn't bound the underlying pointer to
just the data part, let alone pad and align that subobject to ensure it
can be bounded precisely.

--- a/bin/cheribsdtest/Makefile.cheribsdtest
+++ b/bin/cheribsdtest/Makefile.cheribsdtest
@@ -26,6 +26,10 @@ SRCS+=	cheribsdtest_bounds_globals.c					\
 .if ${MACHINE_ABI:Mpurecap}
 SRCS+=	cheribsdtest_bounds_varargs.c					\
 	cheribsdtest_sentries.c
+.if ${MK_CXX} == "yes"
+PROG_CXX:=	${PROG}
+SRCS+=	cheribsdtest_bounds_cxx.cc
+.endif
 .endif
 
 CHERIBSDTEST_DIR:=	${.PARSEDIR}
