--- a/bin/cheribsdtest/Makefile.purecap
+++ b/bin/cheribsdtest/Makefile.purecap
@@ -11,7 +11,7 @@ CHERI_C_TESTS=	yes
 
 .if ${MK_CHERI_CAPREVOKE} == "yes"
 LIBADD+=cheri_caprevoke
-CFLAGS+=-DCAPREVOKE
+CFLAGS+=-DCHERI_REVOKE
 .endif
 
 .include "${.PARSEDIR}/Makefile.cheribsdtest"
