--- a/libexec/rtld-elf64c/Makefile
+++ b/libexec/rtld-elf64c/Makefile
@@ -3,9 +3,9 @@
 NEED_COMPAT=	CHERI
 .include <bsd.compat.mk>
 
-PROG=	ld-cheri-elf.so.1
+PROG=	ld-elf64c.so.1
 MAN=
-MLINKS=	rtld.1 ld-cheri-elf.so.1
+MLINKS=	rtld.1 ld-elf64c.so.1
 
 .PATH:  ${SRCTOP}/libexec/rtld-elf
 .include "${SRCTOP}/libexec/rtld-elf/Makefile"
