Make libpng an INTERNALLIB and only built it for MIPS
There is no need to install it since it's only used by libterasic_mtl.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -85,7 +85,6 @@ SUBDIR=	${SUBDIR_BOOTSTRAP} \
 	libpathconv \
 	libpcap \
 	libpjdlog \
-	libpng \
 	libproc \
 	libprocstat \
 	libregex \
@@ -247,6 +246,11 @@ SUBDIR.${MK_BHYVE}+=	libvmmapi
 
 .if ${MACHINE_ARCH:Mmips64*} || ${MACHINE_ARCH:Mriscv*}
 _libstatcounters=	libstatcounters
+.endif
+
+.if ${MACHINE_ARCH:Mmips64*}
+# Used by ctsrd/lib/libterasic_mtl
+SUBDIR+=	libpng
 .endif
 
 .if ${MACHINE_ARCH} != "powerpc"
