--- a/lib/libpng/Makefile
+++ b/lib/libpng/Makefile
@@ -2,10 +2,7 @@
 
 LIB?=	png
 SHLIB_MAJOR= 15
-PNG_PRIVATE?=yes
-.if ${PNG_PRIVATE} == "yes"
-PRIVATELIB=
-.endif
+INTERNALLIB=
 
 BUILDDIR?=	${.CURDIR}
 SRCDIR?=	${SRCTOP}/contrib/libpng
