--- a/sys/kern/capabilities.conf
+++ b/sys/kern/capabilities.conf
@@ -435,8 +435,8 @@ mprotect
 ##
 ## Allow simple VM operations on the current process.
 ##
-caprevoke
-caprevoke_shadow
+cheri_revoke
+cheri_revoke_shadow
 msync
 munlock
 munlockall
