--- a/usr.bin/Makefile
+++ b/usr.bin/Makefile
@@ -244,6 +244,7 @@ SUBDIR.${MK_KERBEROS_SUPPORT}+=	compile_et
 SUBDIR.${MK_LDNS_UTILS}+=	drill
 SUBDIR.${MK_LDNS_UTILS}+=	host
 SUBDIR.${MK_LIB32}+=	ldd32
+SUBDIR.${MK_LIB64}+=	ktrdump64
 SUBDIR.${MK_LIB64}+=	ldd64
 SUBDIR.${MK_LOCATE}+=	locate
 # XXX msgs?
