--- a/tests/sys/fs/fusefs/Makefile
+++ b/tests/sys/fs/fusefs/Makefile
@@ -72,6 +72,8 @@ CXXWARNFLAGS.gcc+=	-Wno-placement-new -Wno-attributes
 .if ${COMPILER_TYPE} == "gcc" && ${COMPILER_VERSION} >= 80000
 CXXWARNFLAGS+=	-Wno-class-memaccess
 .endif
+# Supress warnings about deprecated implicit copy constructors in gtest.
+CXXWARNFLAGS+=  -Wno-deprecated-copy
 CXXFLAGS+=	-I${SRCTOP}/tests
 CXXFLAGS+=	-I${FUSEFS}
 CXXFLAGS+=	-I${MOUNT}
