Makefile.inc1: Override default KERNCONF for aarch64c
Like cheribuild, we build both kernels, with the hybrid kernel as the
default.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1716,7 +1716,9 @@ NO_KERNELOBJ=		t
 KERNCONF=${KERNFAST}
 .endif
 .endif
-.if ${TARGET_ARCH} == "powerpc64"
+.if ${TARGET_ARCH} == "aarch64c"
+KERNCONF?=	GENERIC-MORELLO GENERIC-MORELLO-PURECAP
+.elif ${TARGET_ARCH} == "powerpc64"
 KERNCONF?=	GENERIC64
 .elif ${TARGET_ARCH} == "powerpc64le"
 KERNCONF?=	GENERIC64LE
