--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1747,6 +1747,7 @@ KERNCONF=${KERNFAST}
 .endif
 .if ${TARGET_ARCH} == "aarch64c"
 KERNCONF?=	GENERIC-MORELLO GENERIC-MORELLO-PURECAP
+NO_INSTALLEXTRAKERNELS?=	no
 .elif ${TARGET_ARCH} == "powerpc64"
 KERNCONF?=	GENERIC64
 .elif ${TARGET_ARCH} == "powerpc64le"
