Makefile.inc1: Default NO_INSTALLEXTRAKERNELS to no for Morello
Since KERNCONF defaults to multiple kernels, we want installkernel to
install both by default, not just the default kernel.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1718,6 +1718,7 @@ KERNCONF=${KERNFAST}
 .endif
 .if ${TARGET_ARCH} == "aarch64c"
 KERNCONF?=	GENERIC-MORELLO GENERIC-MORELLO-PURECAP
+NO_INSTALLEXTRAKERNELS?=	no
 .elif ${TARGET_ARCH} == "powerpc64"
 KERNCONF?=	GENERIC64
 .elif ${TARGET_ARCH} == "powerpc64le"
